# work-boms

./: .gitattributes  .gitignore  LICENSE  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: build-windows.yml
public/models/: crystal-cluster.glb
scripts/: fetch-embedding-model.sh  generate-crystal-glb.mjs
src/: App.css  App.tsx  main.tsx  tailwind.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/models/bge-small-zh-v1.5-int8/: MODEL_LICENSE.md  README.md
src-tauri/resources/plugins/workbom.export-wbom/: plugin.json  reference.md
src-tauri/resources/plugins/workbom.export-wbom/scripts/: export-session-wbom.py  validate_wbom.py
src-tauri/src/: bookmark.rs  bookmark_pool.rs  bookmarks_store.rs  commands.rs  dismissed_suggestions.rs  file_watch.rs  graph_layout.rs  inspiration_store.rs  lib.rs  library.rs  main.rs  metrics.rs  models.rs  obsidian.rs  plugins.rs  search_index.rs  store.rs  trash_store.rs  wikilink.rs
src/components/: AbyssBloomGraph3D.tsx  AppSidebar.tsx  ArtifactPreview.tsx  ArtifactTree.tsx  AssetOpsPanel.tsx  AssetThumb.tsx  AssetsTableView.tsx  AudioWaveform.tsx  Cockpit.tsx  CometGraph3D.tsx  ForceGlobeGraph3D.tsx  GlobalSearch.tsx  GlobeGraph.tsx  GraphAppearancePanel.tsx  GraphInfoPanel.tsx  GraphNodeDetail.tsx  GraphRelationBar.tsx  GraphZoomControls.tsx  GravityFluidGraph3D.tsx  GravityWellGraph.tsx  GravityWellGraph3D.tsx  InlineRename.tsx  Inspector.tsx  (+17 more)
(+71 files in other folders)
